# kitty

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  aftman.toml  default.project.json  kitty-scripts.code-workspace  kitty-utils.code-workspace  pesde.toml  t.js  t.luau  wally.toml  나중에추가.json
.lune/: git.luau  test.luau
cli/: API.luau  Manifest.luau  Package.luau  WallyIndex.luau  context.luau  getCacheDirectory.luau  init.luau  parsePackage.luau  pathfs.luau  types.luau  wallyapi.luau
cli/manifests/: kitty.luau
cli/snapshot_middleware/: lua.luau
cli/src/: API.luau  getCacheDirectory.luau  getUrlDomain.luau  init.luau  logger.luau  parsePackage.luau
kit/Queue/: READ.luau  init.luau  wally.toml
kit/animator/: wally.toml
kit/asset/: init.lua
kit/bricklayer/: wally.toml
kit/capsule/: init.lua  wally.toml
kit/config/: wally.toml
kit/context/: init.lua  wally.toml
kit/dashboard/: init.lua  wally.toml
kit/debugger/: init.lua  init.luau  wally.toml
kit/entity/: wally.toml
kit/flow/: README.md  init.lua  init.luau  wally.toml
kit/form/: README.md  wally.toml
kit/hook/: init.lua  wally.toml
kit/i18n/: wally.toml
kit/input/: init.luau  wally.toml
kit/kedi/: README.md  (+2 more)
link/: Cargo.toml
locales/: app.yml  test.yml
mock/: ASSETNAME.asset.toml  README.md  assets.kitty.toml  kitty-cli-commands.md  kitty.toml
roblox_packages/: handynet.luau
scripts/: wally.sh
src/: lib.rs  localization.rs  main.rs  requirements.rs
test/: wally.toml
tests/: i18n.rs
utils/: default.project.json  pesde.toml  selene.toml  wally.toml
(+228 files in other folders)
