[package]
name = "kitty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libkitty"
path = "src/lib.rs"

[[bin]]
name = "kitty"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.82"
structopt = "0.3.26"
wally-package-types = "1.3.1"
